This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
10/30/21: SEM_3-8-16
10/27/21: Allowed /*  ... */ comments in scripts

10/27/21: Fixed crash reloading settings if not in basic mode and basic mode
hides out a tool panel.

10/25/21: Fixed Acquire at Items assessing problems in the wrong set of
acquire parameters.

10/25/21: Fixed clearing of Acquire flag after Acquire at Items runs a Python
script, and passing exception from camera and possibly other errors back.

10/25/21: Added support for getting refrigerant level and time remaining until
a refill from JEOL scopes.

10/25/21: Fixed hole finder crash with very bad pixel size defined and added
some protection against it taking angle and spacing of pattern from the
diagonal when pixel size is too large.

10/20/21: Added plugin for GMS 3.5 (In 3.8).

10/12/21: Made offset in autofocus calibration not apply for Falcon 4.

1/12/21: Fixed frequent accesses of stage status on JEOL with no events.

10/12/21: Added ability to start a SimpleOrigin refill (requires latest
software) and added script command to turn system on or off.

10/12/21: Changed terminology for dose rate from "unbinned pixel" to "physical
pixel".

10/12/21: Added a camera type for DE Apollo camera and changed dialogs as
needed for this type.

10/12/21: Made DE reference maker able to take a reference for the current
Record parameters, changed script command for DE dark reference to allow this
and Navigator Acquire at Items to use it; and made Setup button in Acquire at
Items open the server reference dialog.

10/6/21: Changed Eucentrity by Focus to estimate scaling between defocus and Z
at different defocus offsets from the slope of an extended autofocus
calibration and provided a new script to measure the scaling directly if