@@ -3,6 +3,17 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+11/2/21: Added script command to set base name for frame files.
+
+11/2/21: Made hole finder check spacing between holes with analysis of
+autocorrelation peaks using pixel size routine.
+
+11/2/21: Added script command to find spacing and vectors of a lattice of
+points in an autocorrelation using the pixel size routine.
+
+11/2/21: Added option to Acquire at Items to take single-image maps in Low
+Dose with View or Search.
+
 10/30/21: SEM_3-8-16
 10/27/21: Allowed /*  ... */ comments in scripts
 
